--- a/superset/translations/messages.pot
+++ b/superset/translations/messages.pot
@@ -25,14 +25,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Superset VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2025-05-30 11:41+0800\n"
+"POT-Creation-Date: 2025-06-12 17:36+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.15.0\n"
+"Generated-By: Babel 2.11.0\n"
 
 msgid ""
 "\n"
@@ -77,6 +77,12 @@ msgid ""
 "            <p>Please check your dashboard/chart for errors.</p>\n"
 "            <p><b><a href=\"%(url)s\">%(call_to_action)s</a></b></p>\n"
 "            "
+msgstr ""
+
+msgid " (Load Failed)"
+msgstr ""
+
+msgid " (Loading...)"
 msgstr ""
 
 msgid " (excluded)"
@@ -223,10 +229,8 @@ msgid ""
 msgstr ""
 
 #, python-format
-msgid "%(suggestion)s instead of \"%(undefinedParameter)s?\""
-msgid_plural ""
-"%(firstSuggestions)s or %(lastSuggestion)s instead of "
-"\"%(undefinedParameter)s\"?"
+msgid "%(suggestions)s instead of \"%(undefinedParameter)s\"?"
+msgid_plural "%(suggestions)s instead of \"%(undefinedParameter)s\"?"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -864,9 +868,6 @@ msgid "Add a Plugin"
 msgstr ""
 
 msgid "Add a dataset"
-msgstr ""
-
-msgid "Add a new record"
 msgstr ""
 
 msgid "Add a new tab"
@@ -1748,9 +1749,6 @@ msgstr ""
 msgid ""
 "Are you sure you want to delete this email group? This action cannot be "
 "undone."
-msgstr ""
-
-msgid "Are you sure you want to delete this item?"
 msgstr ""
 
 msgid "Are you sure you want to delete this post?"
@@ -4099,9 +4097,6 @@ msgstr ""
 msgid "Delete query"
 msgstr ""
 
-msgid "Delete record"
-msgstr ""
-
 msgid "Delete template"
 msgstr ""
 
@@ -4740,9 +4735,6 @@ msgid "Edit properties"
 msgstr ""
 
 msgid "Edit query"
-msgstr ""
-
-msgid "Edit record"
 msgstr ""
 
 msgid "Edit template"
@@ -5929,6 +5921,9 @@ msgstr ""
 msgid "Header row"
 msgstr ""
 
+msgid "Heat Index Forecast"
+msgstr ""
+
 msgid "Heatmap"
 msgstr ""
 
@@ -6553,6 +6548,9 @@ msgstr ""
 msgid "Last run"
 msgstr ""
 
+msgid "Last successful weather update:"
+msgstr ""
+
 msgid "Last updated"
 msgstr ""
 
@@ -6964,6 +6962,9 @@ msgstr ""
 msgid "Max Events"
 msgstr ""
 
+msgid "Max Temperature Forecast"
+msgstr ""
+
 msgid "Max Value"
 msgstr ""
 
@@ -7159,6 +7160,9 @@ msgid "Min"
 msgstr ""
 
 msgid "Min Periods"
+msgstr ""
+
+msgid "Min Temperature Forecast"
 msgstr ""
 
 msgid "Min Value"
@@ -8002,9 +8006,6 @@ msgstr ""
 msgid "Or enter your OpenID here"
 msgstr ""
 
-msgid "Order by"
-msgstr ""
-
 msgid "Order by entity id"
 msgstr ""
 
@@ -8140,9 +8141,6 @@ msgid "PDF download failed, please refresh and try again."
 msgstr ""
 
 msgid "Page length"
-msgstr ""
-
-msgid "Page size"
 msgstr ""
 
 msgid "Paired t-test Table"
@@ -8809,6 +8807,9 @@ msgstr ""
 msgid "Radius in miles"
 msgstr ""
 
+msgid "Rainfall Forecast"
+msgstr ""
+
 msgid "Range"
 msgstr ""
 
@@ -8953,6 +8954,9 @@ msgid "Relationships between community channels"
 msgstr ""
 
 msgid "Relative Date/Time"
+msgstr ""
+
+msgid "Relative Humidity Forecast"
 msgstr ""
 
 msgid "Relative period"
@@ -10339,9 +10343,6 @@ msgid "Show pointer"
 msgstr ""
 
 msgid "Show progress"
-msgstr ""
-
-msgid "Show record"
 msgstr ""
 
 msgid "Show rows subtotal"
@@ -11989,6 +11990,12 @@ msgid ""
 "and for power users who may want to alter specific parameters."
 msgstr ""
 
+msgid "This Week's Dengue Case"
+msgstr ""
+
+msgid "This Week's Diarrhea Case"
+msgstr ""
+
 #, python-format
 msgid "This action will permanently delete %s."
 msgstr ""
@@ -13305,6 +13312,9 @@ msgstr ""
 msgid "Weather Forecasts"
 msgstr ""
 
+msgid "Weather data provided by ECMWF"
+msgstr ""
+
 msgid "Web"
 msgstr ""
 
@@ -13654,6 +13664,9 @@ msgid "Width of the confidence interval. Should be between 0 and 1"
 msgstr ""
 
 msgid "Width of the sparkline"
+msgstr ""
+
+msgid "Wind Speed Forecast"
 msgstr ""
 
 msgid "Window must be > 0"
